crates/courier-ftp/src/components/dialog/snapshots/courier_ftp__components__dialog__snapshot_tests__snap_dialog_scrolled_form_80x24.snap
---
source: crates/courier-ftp/src/components/dialog/snapshot_tests.rs
expression: screen
---
 Quickconnect (not available yet)                                               
 1 Local  ┌ Many fields ────────────────────────────────────────────┐           
┌ Message │  Field number 8  │ value 8                              ▲──────────┐
│(not avai│  Field number 9  │ value 9                              │          │
│         │  Field number 10 │ value 10                             │          │
└─────────│  Field number 11 │ value 11                             │──────────┘
┏▶Local ━━│  Field number 12 │ value 12                             │──────────┐
┃(not avai│  Field number 13 │ value 13                             │          │
┃         │  Field number 14 │ value 14                             │          │
┃         │  Field number 15 │ value 15                             │          │
┃         │  Field number 16 │ value 16                             │          │
┃         │  Field number 17 │ value 17                             │          │
┃         │  Field number 18 │ value 18                             │          │
┃         │  Field number 19 │ value 19                             │          │
┃         │  Field number 20 │ value 20                             │          │
┃         │  Field number 21 │ value 21                             │          │
┃         │  Field number 22 │ value 22                             │          │
┃         │  Field number 23 │ value 23                             │          │
┗━━━━━━━━━│  Field number 24 │ value 24                             │──────────┘
┌ Queue ──│ ▶Field number 25 │ value 25                             ▼──────────┐
│(not avai│                                                         │          │
│         │                   [ OK ]  [ Cancel ]                    │          │
└─────────└─────────────────────────────────────────────────────────┘──────────┘
 DIALOG                                                       F1 help  F10 quit
