crates/courier-ftp/src/components/dialog/snapshots/courier_ftp__components__dialog__snapshot_tests__snap_dialog_too_small_30x8.snap
---
source: crates/courier-ftp/src/components/dialog/snapshot_tests.rs
expression: screen
---
                              
                              
                              
  Terminal too small for this 
            dialog
